--- a/Desktop/WebD_CN/BackEnd/Express/todo_list/package.json
+++ b/Desktop/WebD_CN/BackEnd/Express/todo_list/package.json
@@ -1,10 +1,19 @@
 {
-  "name": "todo_list",
+  "name": "todo_app",
   "version": "1.0.0",
-  "description": "Coding Ninja Project",
+  "description": "My TO-DO app",
   "main": "index.js",
+  "dependencies": {
+    "ejs": "^3.0.2",
+    "express": "^4.17.1",
+    "mongodb": "^3.5.5",
+    "mongoose": "^5.9.7",
+    "routes": "^2.1.0"
+  },
+  "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon index.js"
   },
   "author": "",
   "license": "ISC"
